fix out of screen content

--- a/static/main.css
+++ b/static/main.css
@@ -180,6 +180,15 @@ body {
 }
 
 
+.container-center-block>div {
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
+
+    border: var(--debug)
+}
+
+
 .container-nav {
     /* height: 100px; */
     max-height: 100px;
@@ -288,7 +297,7 @@ h1 {
 
 
 .text-box {
-    width: 900px;
+    /* width: 900px; */
     padding: 16px 32px 16px 32px;
     margin-left: auto;
     margin-right: auto;
